--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=perfulandia
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_hospital_vm
+spring.datasource.url=jdbc:mysql://localhost:3307/perfulandia
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
